--- a/_posts/2020-01-01-the-us-narrative-today.html
+++ b/_posts/2020-01-01-the-us-narrative-today.html
@@ -1570,107 +1570,107 @@ stories:
   domain: http://www.timesenterprise.com/
   link: https://www.timesenterprise.com/news/local_news/investigation-into-former-chief-s-death-continues/article_2a47478c-6186-5c73-a39e-753aa7b9ccef.html
 images:
-- name: long-factory-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/long-factory-copper-circuit.jpg
-- name: white-house-whitehouse-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-umberto-bocc.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-dark-rain.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dark-rain.JPG
-- name: old-cabin-oldcabin-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-post-modern.jpg
-- name: fence-mexico-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-blue-electricity.jpg
-- name: nazi-invasion-nyc-streets-laundromat.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-nyc-streets-laundromat.jpg
-- name: old-door-lock-old-door-lock-2-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-bright-sand.jpg
-- name: aws-s3-square-77-33-800-500-0-max-0--5--1-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-77-33-800-500-0-max-0--5--1-square.jpg
-- name: eduardo-eduardo-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-really-hot.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit.jpg
-- name: old-door-lock-old-door-lock-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-yellow-paper.jpg
-- name: copper-circuit-crow-stkump-waterfront.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-crow-stkump-waterfront.jpg
-- name: udnie-IMG_8374.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8374.jpg
-- name: power-lines-power-lines-empty-space-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dark-soul.jpg
-- name: dragon-desert-desert-dragon-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-ww2-dresden.jpg
-- name: abe-lincoln-one-ww2-color-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-color-file-00-00-07-91.jpg
-- name: subway-subway-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-ww2-dresden.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-graham-sutherland.jpg
-- name: blossombar-really-hot-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-really-hot-file-00-00-00-00.jpg
-- name: bf-skinner-underground-subway_36342747010_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-underground-subway_36342747010_o.jpg
-- name: docks-docks-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-aqua.jpg
-- name: 35201856153_61bc075e4b-scream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-scream.jpg
-- name: san-francisco-street-view-san-francisco-street-view-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-clean-view.jpg
-- name: braceros-domingo-ulloa-face-eyes-open-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-face-eyes-open-statue.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-purple-storm.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-purple-storm.png
-- name: miamibeach-miamibeach-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-post-modern.jpg
-- name: window-window-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-monet-one.jpg
-- name: blossombar-aqua-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-aqua-file-00-00-24-99.jpg
-- name: mistywoods-babyfoot-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-crabapple.jpg
-- name: rain-princess-IMG_7559.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7559.jpg
-- name: abandonedbuildings_smooth_ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_smooth_ride.jpg
-- name: bf-skinner-girl-reading-bench-garden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-girl-reading-bench-garden.jpg
-- name: gypsymosaic-gypsy-eyes-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-post-modern.jpg
-- name: sand-hand-sand-hand-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-circuit-5.jpg
-- name: razorwire-DSC-0080.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-kandinsky-bv.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-kandinsky-bv.JPG
-- name: downtown-fredericksburg-downtown-fredericksburg-purp-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-purp-paper.JPG
-- name: berlinwall2-berlinwall-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-space-pizza.jpg
-- name: art-museum-art-museum-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-emily-carr.jpg
-- name: old-barn-old-barn-1500-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-deep-connections.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crabapple.jpg
-- name: blossombar-purple-pond-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-pond-file-00-00-24-99.jpg
-- name: status-berlin-status-berlin-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-plentiful.jpg
-- name: lincoln-memorial-lincolnmemorial-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-umberto-bocc.jpg
-- name: mosaic-face-mosaic-face-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-satan-red.jpg
-- name: server-cloud-server-racks-clouds-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-horiz-circuit.jpg
-- name: ellis-island-ellisisland-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-monet-one.jpg
-- name: school-clouds-church-clouds-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-mucha-mult.jpg
-- name: meadowbutterfly-meadow-butterfly-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-alberto-giacometti.jpg
-- name: gypsymosaic-gypsy-eyes-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-blue-granite.jpg
-- name: 35562068104_fa20c57575-wave.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-wave.jpg
+- name: gears-4882162452-fa3126b38d-b-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-post-modern.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-cinnamon-rolls.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-blue-circuit-3.jpg
+- name: christianity-christianity-under-construction-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-yellow-paper.jpg
+- name: death-valley-death-valley-national-park-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-aqua.jpg
+- name: dragon-desert-desert-dragon-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-green-zuma.jpg
+- name: old-gas-pumps-oldgaspumps-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-satan-red.jpg
+- name: beach-clouds-lifeguard-beachclouds-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-sunday.jpg
+- name: san-francisco-street-view-san-francisco-street-view-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-alien-goggles.jpg
+- name: abe-lincoln-one-smoking-cigarette-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smoking-cigarette-file-00-00-07-91.jpg
+- name: stories-fence-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-fence-ww2-dresden.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-satan-red.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-satan-red.JPG
+- name: dragon-desert-desert-dragon-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-ww2-color.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-diego-rivera1.jpg
+- name: dragon-desert-desert-dragon-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-hot-spicy.jpg
+- name: statue-of-liberty-front-view-statueofliberty-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-sand-paper.jpg
+- name: nyc-flag-nycflag-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-yellow-collage.jpg
+- name: docks-docks-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-pablo-blue.jpg
+- name: oldhotel-oldhotel-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-cinnamon-rolls.jpg
+- name: la-muse-lincoln-memorial_36690528196_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-lincoln-memorial_36690528196_o.jpg
+- name: curtain-curtain-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-yellow-collage.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-internet-numbers.jpg
+- name: bf-skinner-statue-of-liberty-front-bright.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-statue-of-liberty-front-bright.jpg
+- name: art-museum-art-museum-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-light-dali.jpg
+- name: hollywood-building-hollywood-building-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-copper-circuit-2.jpg
+- name: catacombs-catacombs-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-gan-vogh.jpg
+- name: downtown-los-angeles-downtown-la-propaganda-leaflets.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-propaganda-leaflets.JPG
+- name: stories-carryload-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-carryload-diego-rivera1.jpg
+- name: ellis-island-ellisisland-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-colored-circuits.jpg
+- name: windowmountain-window-mountain-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-gred-mash.jpg
+- name: status-berlin-status-berlin-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-electricity.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-yellow-paper.jpg
+- name: abe-lincoln-one-purple-pond-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-pond-file-00-00-07-91.jpg
+- name: old-granary-field-oldhouse-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-sand-paper.jpg
+- name: scream-IMG_7916.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7916.jpg
+- name: downtheline-downtheline-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-smooth-ride.jpg
+- name: oldhotel-oldhotel-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-kandinsky-bv.jpg
+- name: cargo-ship-cargo-ship-on-sea-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-jap-wav-pr.jpg
+- name: abe-lincoln-one-umberto-bocc-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-umberto-bocc-file-00-00-15-87.jpg
+- name: locked-up-steam-lock-up-steam-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-feed-people.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-marcel-duchamp.jpg
+- name: old-door-lock-old-door-lock-2-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-circuit-3.jpg
+- name: old-door-lock-old-door-lock-2-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-copper-circuit.jpg
+- name: abe-lincoln-one-smooth-ride-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smooth-ride-file-00-00-07-91.jpg
+- name: downtown-street-view-norman-rockwell-ruby-bridges.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-street-view-norman-rockwell-ruby-bridges.jpg
+- name: blossombar-crafty-painting-file-00-00-50-58.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-58.jpg
+- name: oldsmallboat-oldsmallboat-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-dali-three.jpg
+- name: fence-fence-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-monet-one.jpg
+- name: ellis-island-ellis-island-room-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-neo-instinct.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-deep-connections.jpg
+- name: blossombar-crafty-painting-file-00-00-50-12.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-12.jpg
 ---
 North Korea's Kim Touts Strategic Weapon Amid Stall In Talks.&nbsp;Man Charged With Stealing Lexus From Sunset Hills Gas Station.&nbsp;Worlds Strongest Man Mark Henry Returns Home For Induction.&nbsp;Indiana Should Stand Its Ground Against Legalizing Marijuana.&nbsp;Insurance Provider Cuts Call Center Fraud By 40%.&nbsp;Hearings Start For Rezoning Application.&nbsp;Hypnotherapy Could Help That Resolution.&nbsp;Have A Resolution For The New Year? Here Are The Most Popular Ones.&nbsp;
